--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "@babel/core": "7.6.0",
+        "@material-ui/core": "^4.7.0",
         "@rocketseat/unform": "^1.5.1",
         "@svgr/webpack": "4.3.2",
         "@typescript-eslint/eslint-plugin": "^2.2.0",
